# browser-mcp

./: .gitignore  Dockerfile  docker-compose.yml  opencode.json  prd.md  pyproject.toml
src/browser_mcp/: __main__.py  browser.py  cli.py  cursor.py  diff.py  modals.py  orbit.py  server.py
src/browser_mcp/tools/: __init__.py  captcha.py  chain.py  click.py  fill.py  goto.py  keystroke.py  sleep.py  tabs.py  view.py
tests/: test_diff.py
